--- a/spark/pom.xml
+++ b/spark/pom.xml
@@ -6,8 +6,14 @@
   <dependencies> 
   	<dependency> <!-- Spark 依赖 --> 
   		<groupId>org.apache.spark</groupId> 
-  		<artifactId>spark-core_2.10</artifactId><version>1.2.0</version> 
+  		<artifactId>spark-core_2.10</artifactId>
+  		<version>1.2.0</version> 
   		<scope>provided</scope> 
   	</dependency> 
+  	<dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>5.1.41</version> 
+    </dependency>
   </dependencies>
 </project>
