--- a/springboot/src/main/resources/config/application.properties
+++ b/springboot/src/main/resources/config/application.properties
@@ -1,6 +1,6 @@
 spring.devtools.restart.enabled=true
 #database setting
-spring.datasource.url=jdbc:mysql://localhost:3306/match
+spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
