--- a/spark/pom.xml
+++ b/spark/pom.xml
@@ -4,7 +4,8 @@
   <artifactId>spark</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <dependencies> 
-  	<dependency> <!-- Spark 依赖 --> 
+   <!-- Spark 依赖  -->
+  	<dependency> 
   		<groupId>org.apache.spark</groupId> 
   		<artifactId>spark-core_2.10</artifactId>
   		<version>1.2.0</version> 
@@ -15,5 +16,23 @@
         <artifactId>mysql-connector-java</artifactId>
         <version>5.1.41</version> 
     </dependency>
+    <dependency>
+       <groupId>org.apache.spark</groupId>
+       <artifactId>spark-hive_2.10</artifactId>
+       <version>1.2.0</version> 
+    </dependency>
+    
+     <dependency>
+       <groupId>org.apache.spark</groupId>
+       <artifactId>spark-streaming_2.10</artifactId>
+       <version>1.2.0</version> 
+    </dependency>
+    
+   <!-- <dependency> Spark dependency
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-sql_2.11</artifactId>
+      <version>2.2.0</version>
+    </dependency> -->
+    
   </dependencies>
 </project>
