--- a/spark/pom.xml
+++ b/spark/pom.xml
@@ -27,6 +27,11 @@
        <artifactId>spark-streaming_2.10</artifactId>
        <version>1.2.0</version> 
     </dependency>
+    <dependency>
+       <groupId>org.apache.spark</groupId>
+       <artifactId>spark-mllib_2.10</artifactId>
+       <version>1.2.0</version> 
+    </dependency>
     
    <!-- <dependency> Spark dependency
       <groupId>org.apache.spark</groupId>
