--- a/thrift-example/pom.xml
+++ b/thrift-example/pom.xml
@@ -16,10 +16,14 @@
 
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+	    <groupId>org.apache.thrift</groupId>
+	    <artifactId>libthrift</artifactId>
+	    <version>0.10.0</version>
+	</dependency>
+	<dependency>
+		 <groupId>org.slf4j</groupId>
+		 <artifactId>slf4j-log4j12</artifactId>
+		 <version>1.7.5</version>
+	</dependency>
   </dependencies>
 </project>
