--- a/springcloud-example/eureka-server/pom.xml
+++ b/springcloud-example/eureka-server/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>springcloud-example</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <artifactId>eureka</artifactId>
+  <artifactId>eureka-server</artifactId>
   <dependencies>
        <!--eureka server -->
        <dependency>
