--- a/springcloud-example/pom.xml
+++ b/springcloud-example/pom.xml
@@ -42,5 +42,6 @@
    	<module>eureka-server</module>
     <module>eureka-consumer</module>
     <module>eureka-provider</module>
+    <module>eureka-config-server</module>
   </modules>
 </project>
