--- a/onsite/test-server/src/main/resources/config/bootstrap.properties
+++ b/onsite/test-server/src/main/resources/config/bootstrap.properties
@@ -1,6 +1,7 @@
 spring.application.name=test-server
 
 spring.cloud.config.profile=dev
+spring.cloud.config.label=master
 
 eureka.client.serviceUrl.defaultZone=http://suo:suo@127.0.0.1:8761/eureka/
 
@@ -8,3 +9,8 @@ feign.hystrix.enabled=true
 
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=config
+
+management.security.enabled=false
+spring.rabbitmq.host=127.0.0.1
+spring.rabbitmq.port=5672
+
