--- a/onsite/config/pom.xml
+++ b/onsite/config/pom.xml
@@ -28,5 +28,9 @@
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-starter-eureka</artifactId>
     </dependency>
+    <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+    </dependency>
   </dependencies>
 </project>
