--- a/onsite/config/src/main/resources/config/application.properties
+++ b/onsite/config/src/main/resources/config/application.properties
@@ -4,3 +4,10 @@ server.port=8888
 spring.cloud.config.server.git.uri=https://github.com/suozq1/onsiteConfig
 
 eureka.client.serviceUrl.defaultZone=http://suo:suo@127.0.0.1:8761/eureka/
+
+management.security.enabled=false
+
+spring.rabbitmq.host=127.0.0.1
+spring.rabbitmq.port=5672
+#spring.rabbitmq.username=
+#spring.rabbitmq.password=
