--- a/onsite/pom.xml
+++ b/onsite/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-dependencies</artifactId>
-            <version>Dalston.SR4</version>
+            <version>Dalston.SR5</version>
             <type>pom</type>
             <scope>import</scope>
         </dependency>
@@ -40,12 +40,6 @@
 		  <groupId>org.springframework.boot</groupId>
 		  <artifactId>spring-boot-starter-actuator</artifactId>
 	 </dependency>
-	 
-	 <!--消息 -->
-	 <dependency>
-         <groupId>org.springframework.cloud</groupId>
-         <artifactId>spring-cloud-starter-bus-amqp</artifactId>
-     </dependency>
   
   </dependencies>
 	
@@ -67,4 +61,15 @@
     <module>common</module>
     <module>user-server</module>
   </modules>
+  
+  <repositories>
+    <repository>
+        <id>spring-milestones</id>
+        <name>Spring Milestones</name>
+        <url>https://repo.spring.io/libs-milestone</url>
+        <snapshots>
+            <enabled>false</enabled>
+        </snapshots>
+    </repository>
+  </repositories>
 </project>
