--- a/onsite/sleuth/pom.xml
+++ b/onsite/sleuth/pom.xml
@@ -7,8 +7,8 @@
     <artifactId>onsite</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <artifactId>user-server</artifactId>
-  <name>user-server</name>
+  <artifactId>sleuth</artifactId>
+  <name>sleuth</name>
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -21,30 +21,25 @@
     </dependency>
     
     <dependency>
+         <groupId>org.springframework.cloud</groupId>
+         <artifactId>spring-cloud-starter-config</artifactId>
+     </dependency>
+    
+    <!--eureka server -->
+    <dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-starter-eureka</artifactId>
     </dependency>
     
      <dependency>
-         <groupId>org.springframework.cloud</groupId>
-         <artifactId>spring-cloud-starter-feign</artifactId>
+         <groupId>io.zipkin.java</groupId>
+         <artifactId>zipkin-server</artifactId>
      </dependency>
-     
-     <dependency>
-         <groupId>org.springframework.cloud</groupId>
-         <artifactId>spring-cloud-starter-config</artifactId>
-     </dependency>
-     
-     <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-zipkin</artifactId>
-     </dependency>
-     
 
-    <dependency>
-    	<groupId>com.lenovo</groupId>
-    	<artifactId>common</artifactId>
-    	<version>0.0.1-SNAPSHOT</version>
-    </dependency>
+     <dependency>
+         <groupId>io.zipkin.java</groupId>
+         <artifactId>zipkin-autoconfigure-ui</artifactId>
+     </dependency>
+     
   </dependencies>
 </project>
