--- a/springcloud-example/eureka-client-consumer/pom.xml
+++ b/springcloud-example/eureka-client-consumer/pom.xml
@@ -29,6 +29,11 @@
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-starter-eureka</artifactId>
     </dependency>
+    
+    <dependency>
+	    <groupId>org.springframework.cloud</groupId>
+	    <artifactId>spring-cloud-starter-zipkin</artifactId>
+	</dependency>
 
     <!-- spring boot test-->
     <dependency>
