--- a/onsite/test-server/src/main/resources/config/bootstrap.properties
+++ b/onsite/test-server/src/main/resources/config/bootstrap.properties
@@ -4,7 +4,8 @@ spring.cloud.config.profile=dev
 spring.cloud.config.label=master
 
 eureka.client.serviceUrl.defaultZone=http://suo:suo@127.0.0.1:8761/eureka/
-spring.zipkin.base-url=http://sleuth-server/
+spring.zipkin.base-url=http://localhost:9411
+spring.sleuth.sampler.percentage=1
 feign.hystrix.enabled=true
 
 spring.cloud.config.discovery.enabled=true
