--- a/onsite/user-server/src/main/resources/config/application.properties
+++ b/onsite/user-server/src/main/resources/config/application.properties
@@ -3,7 +3,8 @@ spring.application.name=user-server
 spring.cloud.config.profile=dev
 
 eureka.client.serviceUrl.defaultZone=http://suo:suo@127.0.0.1:8761/eureka/
-
+spring.zipkin.base-url=http://localhost:9411
+spring.sleuth.sampler.percentage=1
 feign.hystrix.enabled=true
 
 spring.cloud.config.discovery.enabled=true
